--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p class="banner-subtitle">para crianças e adultos autistas</p>
                 </div>
                 <div class="col-md-6 order-1 order-md-2 position-relative image-container mb-4 mb-md-0">
-                    <img src="/img/banner.jpg" alt="Imagem do Banner" class="img-fluid main-image">
+                    <img src="img/banner.jpg" alt="Imagem do Banner" class="img-fluid main-image">
                 </div>
             </div>
         </div>
@@ -108,25 +108,25 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/img/1.jpg" class="d-block w-100 rounded" alt="Foto 1">
+                    <img src="img/1.jpg" class="d-block w-100 rounded" alt="Foto 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/2.jpg" class="d-block w-100 rounded" alt="Foto 2">
+                    <img src="img/2.jpg" class="d-block w-100 rounded" alt="Foto 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/3.jpg" class="d-block w-100 rounded" alt="Foto 3">
+                    <img src="img/3.jpg" class="d-block w-100 rounded" alt="Foto 3">
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/4.jpg" class="d-block w-100 rounded" alt="Foto 4">
+                    <img src="img/4.jpg" class="d-block w-100 rounded" alt="Foto 4">
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/5.jpg" class="d-block w-100 rounded" alt="Foto 5">
+                    <img src="img/5.jpg" class="d-block w-100 rounded" alt="Foto 5">
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/6.jpg" class="d-block w-100 rounded" alt="Foto 6">
+                    <img src="img/6.jpg" class="d-block w-100 rounded" alt="Foto 6">
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/7.jpg" class="d-block w-100 rounded" alt="Foto 7">
+                    <img src="img/7.jpg" class="d-block w-100 rounded" alt="Foto 7">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -257,7 +257,7 @@
                         <div class="card card-flip h-100">
                             <div class="card-front text-white">
                                 <div class="card-body card-body-front">
-                                    <img src="/img/Foto_Melyssa.jpg" class="card-img-top" alt="Image description">
+                                    <img src="img/Foto_Melyssa.jpg" class="card-img-top" alt="Image description">
                                     <h3 class="card-title mt-4 mb-3">Melyssa Lira</h3>
                                     <ul class="card-text mb-3">
                                         <li>Psicóloga</li>
@@ -279,7 +279,7 @@
                         <div class="card card-flip h-100">
                             <div class="card-front text-white">
                                 <div class="card-body card-body-front">
-                                    <img src="/img/Foto_Mariana.jpg" class="card-img-top" alt="Image description">
+                                    <img src="img/Foto_Mariana.jpg" class="card-img-top" alt="Image description">
                                     <h3 class="card-title mt-4 mb-3">Mariana Alves</h3>
                                     <ul class="card-text mb-3">
                                         <li>Graduada em Educação Física - Universidade Paulista</li>
@@ -300,7 +300,7 @@
                         <div class="card card-flip h-100">
                             <div class="card-front text-white">
                                 <div class="card-body card-body-front">
-                                    <img src="/img/foto_Naisa.jpg" class="card-img-top" alt="Image description">
+                                    <img src="img/foto_Naisa.jpg" class="card-img-top" alt="Image description">
                                     <h3 class="card-title mt-4 mb-3">Naisa Conde</h3>
                                     <ul class="card-text mb-3">
                                         <li>Psicóloga - CRP: 06/166604</li>
@@ -322,7 +322,7 @@
                         <div class="card card-flip h-100">
                             <div class="card-front text-white">
                                 <div class="card-body card-body-front">
-                                    <img src="/img/Foto_SaraLopes.jpg" class="card-img-top" alt="Image description">
+                                    <img src="img/Foto_SaraLopes.jpg" class="card-img-top" alt="Image description">
                                     <h3 class="card-title mt-4 mb-3">Sara Lopes</h3>
                                     <ul class="card-text mb-3">
                                         <li>Psicóloga Especializada em Transtorno do Espectro Autista (TEA)</li>
@@ -343,7 +343,7 @@
                         <div class="card card-flip h-100">
                             <div class="card-front text-white">
                                 <div class="card-body card-body-front">
-                                    <img src="/img/Foto_Marcos.jpg" class="card-img-top" alt="Image description">
+                                    <img src="img/Foto_Marcos.jpg" class="card-img-top" alt="Image description">
                                     <h3 class="card-title mt-4 mb-3">Marcos</h3>
                                     <ul class="card-text mb-3">
                                         <li>Psicólogo Especializado em Análise do Comportamento Aplicada (ABA)</li>
@@ -364,7 +364,7 @@
                         <div class="card card-flip h-100">
                             <div class="card-front text-white">
                                 <div class="card-body card-body-front">
-                                    <img src="/img/Foto_Grecia.jpg" class="card-img-top" alt="Image description">
+                                    <img src="img/Foto_Grecia.jpg" class="card-img-top" alt="Image description">
                                     <h3 class="card-title mt-4 mb-3">Grecia</h3>
                                     <ul class="card-text mb-3">
                                         <li>Fonoaudióloga Grécia - Especialista em Linguagem Infantil</li>
