--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <p class="text-muted">Espaços pensados para acolher e inspirar confiança.</p>
+                            <p class="text-muted">: O espaço foi planejado para promover bem-estar e segurança, com uma atmosfera que estimula o desenvolvimento emocional e cognitivo, essencial para o tratamento.</p>
                         </div>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <p class="text-muted">Foco em empatia e personalização do atendimento.</p>
+                            <p class="text-muted">Nossa equipe se dedica a oferecer um atendimento de qualidade, com foco em tratar cada paciente com respeito e valorização em todas as fases do cuidado.</p>
                         </div>
                     </div>
                 </div>
@@ -185,7 +185,7 @@
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <p class="text-muted">Abordagem integrada para o melhor resultado.</p>
+                            <p class="text-muted">Realizamos avaliações e tratamentos em áreas como psicologia, fonoaudiologia, terapia ocupacional, psicomotricidade e neuropsicologia, proporcionando um atendimento mais completo e eficaz.</p>
                         </div>
                     </div>
                 </div>
@@ -199,7 +199,7 @@
                     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <p class="text-muted">Planos de cuidado únicos para cada paciente.</p>
+                            <p class="text-muted">Oferecemos suporte domiciliar e escolar, adaptando as intervenções ao ambiente de cada paciente, garantindo continuidade e acessibilidade no tratamento para melhores resultados. </p>
                         </div>
                     </div>
                 </div>
@@ -213,7 +213,7 @@
                     <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <p class="text-muted">Profissionais comprometidos com a excelência.</p>
+                            <p class="text-muted">Nossa equipe é formada por profissionais altamente capacitados, comprometidos com a saúde, o desenvolvimento e a qualidade de vida dos pacientes, sempre atualizando as melhores práticas e inovações na área</p>
                         </div>
                     </div>
                 </div>
@@ -262,15 +262,13 @@
                                     <ul class="card-text mb-3">
                                         <li>Psicóloga</li>
                                         <li>Pós-graduanda em Análise do Comportamento</li>
-                                        <li>Com experiência de 3 anos como Assistente Terapêutica Escolar (AT)</li>
-                                        <li>Aplicadora da Análise do Comportamento Aplicada (ABA)</li>
                                     </ul>
                                     <a class="btn btn-outline-secondary mt-3">Passe o mouse ou clique para ver mais</a>
                                 </div>
                             </div>
                             <div class="card-back bg-white">
                                 <div class="card-body card-body-back">
-                                    <p class="card-text">Melyssa Lira se especializa em estratégias naturalistas e no acompanhamento de atrasos no desenvolvimento infantil e adolescente. Está em constante atualização por meio da pós-graduação em Análise do Comportamento, voltada para intervenções eficazes e personalizadas.</p>
+                                    <p class="card-text">Com experiência de 3 anos como Assistente Terapêutica Escolar (AT) e aplicadora da Análise do Comportamento Aplicada (ABA), especializada em estratégias naturalistas e no acompanhamento de atrasos no desenvolvimento infantil e adolescente. Em constante atualização por meio da pós-graduação em Análise do Comportamento, voltada para intervenções eficazes e personalizadas. </p>
                                 </div>
                             </div>
                         </div>
@@ -305,15 +303,13 @@
                                     <ul class="card-text mb-3">
                                         <li>Psicóloga - CRP: 06/166604</li>
                                         <li>Responsável Técnica e Sócia da Casa Feliz</li>
-                                        <li>Especializações em Neuropsicologia, Terapia Cognitivo-Comportamental, Psicopedagogia</li>
-                                        <li>Pós-graduação em Análise do Comportamento Aplicada</li>
                                     </ul>
                                     <a class="btn btn-outline-secondary mt-3">Passe o mouse ou clique para ver mais</a>
                                 </div>
                             </div>
                             <div class="card-back bg-white">
                                 <div class="card-body card-body-back">
-                                    <p class="card-text">Atuo na avaliação e reabilitação neuropsicológica, além de oferecer psicoterapia individual para crianças, adultos e idosos. Meu trabalho é pautado em intervenções personalizadas, visando o bem-estar e desenvolvimento pleno de cada paciente.</p>
+                                    <p class="card-text">Com especializações em Neuropsicologia, Terapia CognitivoComportamental, Psicopedagogia e pós-graduação em Análise do Comportamento Aplicada, atuo na avaliação e reabilitação neuropsicológica, além de oferecer psicoterapia individual para crianças, adultos e idosos. Meu trabalho é pautado em intervenções personalizadas, visando o bem-estar e desenvolvimento pleno de cada paciente.</p>
                                 </div>
                             </div>
                         </div>
@@ -334,7 +330,7 @@
                             </div>
                             <div class="card-back bg-white">
                                 <div class="card-body card-body-back">
-                                    <p class="card-text">Como supervisora e psicóloga clínica, ofereço suporte especializado para o desenvolvimento e bem-estar de indivíduos com TEA, proporcionando intervenções eficazes e acompanhamento contínuo.</p>
+                                    <p class="card-text">Como supervisora e psicóloga clínica, ofereço suporte especializado para o desenvolvimento e bem-estar de indivíduos com TEA, proporcionando intervenções eficazes e acompanhamento contínuo. </p>
                                 </div>
                             </div>
                         </div>
