correcao de texto

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <p class="text-muted">: O espaço foi planejado para promover bem-estar e segurança, com uma atmosfera que estimula o desenvolvimento emocional e cognitivo, essencial para o tratamento.</p>
+                            <p class="text-muted">O espaço foi planejado para promover bem-estar e segurança, com uma atmosfera que estimula o desenvolvimento emocional e cognitivo, essencial para o tratamento.</p>
                         </div>
                     </div>
                 </div>
